--- a/rubyllm_chat_app/Gemfile
+++ b/rubyllm_chat_app/Gemfile
@@ -16,8 +16,11 @@ gem "turbo-rails"
 gem "stimulus-rails"
 # Use Tailwind CSS [https://github.com/rails/tailwindcss-rails]
 gem "tailwindcss-rails"
+gem "tailwindcss-ruby", "~> 4.1"
 # If you're not ready to upgrade yet, please pin to version 3 in your Gemfile:
 #   gem "tailwindcss-rails", "~> 3.3.1"
+# gem "tailwindcss-ruby", "3.4.13"
+
 # Build JSON APIs with ease [https://github.com/rails/jbuilder]
 gem "jbuilder"
 
