--- a/rubyllm_chat_app/justfile
+++ b/rubyllm_chat_app/justfile
@@ -10,6 +10,42 @@ db-destroy:
 run:
     bin/dev
 
+# [PROD] runs rails in prod
+run-prod:
+    #    rails s -e production -p 8080 -b 0.0.0.0
+    # RAILS_ENV=production rails db:create
+    # > Error, no user
+    # $ psql -U ricc postgres
+    # >> CREATE USER rubyllm_chat_app WITH PASSWORD 'your-very-strong-and-secret-password' CREATEDB;
+    # DONE! Great Gemini!
+    # RUBYLLM_CHAT_APP_DATABASE_PASSWORD='your-very-strong-and-secret-password' RAILS_ENV=production rails db:create
+
+    #SECRET_KEY_BASE_DUMMY=1
+    ./bin/rails assets:precompile
+    #RAILS_ENV=production rails db:setup
+    RAILS_ENV=production rails db:migrate
+    PORT=8080 RAILS_ENV=production bin/docker-entrypoint rails s -e production
+    # -->  http://127.0.0.1:8080 (wont work with HTTPS)
+
+# PostgreSQL: show local DBs
+db-show-local-databases:
+    @echo 1. Show DBs in localhost
+    psql -l
+
+    @echo 2. Show DBs as rubyllm_chat_app
+    @yellow '🐘 psql -U rubyllm_chat_app -l'
+
+    @echo 3. Connect to DEV DB:
+    @yellow '🐘 psql -d rubyllm_chat_app_development'
+
+    @echo 4. Connect to PROD DB:
+    @yellow '🐘 psql -U rubyllm_chat_app -d rubyllm_chat_app_production'
+    # psql -U rubyllm_chat_app -l | grep rubyllm_chat_app_production
+
+
+rails-console-prod:
+    rails c -e production
+
 
 migrate-gone-wrong:
     # For CreateMessages (basic column types)
