--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -35,6 +35,7 @@ options:
   logging: CLOUD_LOGGING_ONLY
   # This is the custom SA I created for CloudBuild
   #serviceAccount: 'projects/${_PROJECT_ID}/serviceAccounts/ricc-cb-sa@${_PROJECT_ID}.iam.gserviceaccount.com'
+  serviceAccount: 'projects/${_PROJECT_ID}/serviceAccounts/272932496670@cloudbuild.gserviceaccount.com'
 
 substitutions:
   _REGION: europe-west10 # for Cloud Build.
@@ -89,6 +90,7 @@ steps:
   - 'RAILS_MASTER_KEY=$_RAILS_MASTER_KEY'
   - 'DATABASE_URL_PROD=$_DATABASE_URL_PROD'
   - 'GEMINI_API_KEY=$_GEMINI_API_KEY'
+
 
 # Then I tag it with another so it survives multiple builds..
 - name: 'gcr.io/cloud-builders/docker'
