--- a/rubyllm_chat_app/Dockerfile
+++ b/rubyllm_chat_app/Dockerfile
@@ -25,6 +25,9 @@ ENV RAILS_ENV="production" \
     BUNDLE_PATH="/usr/local/bundle" \
     BUNDLE_WITHOUT="development"
 
+# Riccardo - so wants the Cloud :)
+ENV PORT 8080
+
 # Throw-away build stage to reduce size of final image
 FROM base AS build
 
