--- a/rubyllm_chat_app/justfile
+++ b/rubyllm_chat_app/justfile
@@ -66,7 +66,8 @@ test-chat-creation-ask2:
 test-gemini:
     echo 'chat = RubyLLM.chat ; chat.ask "Are you an LLM? Who built you? Whats your cutoff time?"' | rails c
 
-autorename:
+# Autorenames chats with Gemini..
+chat-autorename:
     echo Chat.autotitle_if_needed | rails c
 
 
@@ -76,4 +77,4 @@ docker-build:
     echo done. Look at the time it took.
 
 docker-run:
-    docker run -it -p 8080:8080 r8tc .
+    docker run -it -p 8080:8080 r8tc
