--- a/rubyllm_chat_app/Dockerfile
+++ b/rubyllm_chat_app/Dockerfile
@@ -73,3 +73,4 @@ ENTRYPOINT ["/rails/bin/docker-entrypoint"]
 # Start server via Thruster by default, this can be overwritten at runtime
 EXPOSE 8080
 CMD [ "./bin/thrust", "./bin/rails", "server", "-p", "8080", "-b", "0.0.0.0"]
+# => "./bin/thrust ./bin/rails server -p 8080 -b 0.0.0.0"]
