--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -120,23 +120,23 @@ steps:
   - 'APP_NAME=$_APP_NAME'
   - 'GCLOUD_REGION=$_GCLOUD_REGION'
 
-# # Questo finalmente funge!
-# - name: 'gcr.io/cloud-builders/gcloud'
-#   id: 5. Push PROD to Cloud Run via new MAGIC script # which doesnt need mounting anymore
-#   entrypoint: bash
-#   args:
-#   - bin/ricc-cb-push-to-cloudrun-magic.sh
-#   - prod
-#   allowFailure: true
-#   dir: rubyllm_chat_app/
-#   env:
-#   - 'PROJECT_ID=$PROJECT_ID'
-#   - 'RAILS_MASTER_KEY=$_RAILS_MASTER_KEY'
-#   - 'OBJC_DISABLE_INITIALIZE_FORK_SAFETY=YES'
-#   - 'RAILS_ENV=production'
-# #  - 'DATABASE_URL_PROD=$_DATABASE_URL_PROD'
-#   - 'DATABASE_URL=$_DATABASE_URL_PROD'
-#   - 'GEMINI_REPLY_JOB_VERBOSE=true'
-#   - 'APP_NAME=$_APP_NAME'
-#   - 'GCLOUD_REGION=$_GCLOUD_REGION'
-#   - 'GEMINI_API_KEY=$_GEMINI_API_KEY'
+# Questo finalmente funge!
+- name: 'gcr.io/cloud-builders/gcloud'
+  id: 5. Push PROD to Cloud Run via new MAGIC script # which doesnt need mounting anymore
+  entrypoint: bash
+  args:
+  - bin/ricc-cb-push-to-cloudrun-magic.sh
+  - prod
+  allowFailure: true
+  dir: rubyllm_chat_app/
+  env:
+  - 'PROJECT_ID=$PROJECT_ID'
+  - 'RAILS_MASTER_KEY=$_RAILS_MASTER_KEY'
+  - 'OBJC_DISABLE_INITIALIZE_FORK_SAFETY=YES'
+  - 'RAILS_ENV=production'
+  - 'DATABASE_URL_PROD=$_DATABASE_URL_PROD'
+  - 'DATABASE_URL=$_DATABASE_URL_PROD'
+  - 'GEMINI_REPLY_JOB_VERBOSE=true'
+  - 'APP_NAME=$_APP_NAME'
+  - 'GCLOUD_REGION=$_GCLOUD_REGION'
+  - 'GEMINI_API_KEY=$_GEMINI_API_KEY'
