--- a/rubyllm_chat_app/config/cable.yml
+++ b/rubyllm_chat_app/config/cable.yml
@@ -8,10 +8,14 @@ development:
 test:
   adapter: test
 
+# production:
+#   adapter: solid_cable
+#   connects_to:
+#     database:
+#       writing: cable
+#   polling_interval: 0.1.seconds
+#   message_retention: 1.day
+
+# riccardo - following https://community.render.com/t/the-cable-database-is-not-configured-for-the-production-environment/26726/5
 production:
-  adapter: solid_cable
-  connects_to:
-    database:
-      writing: cable
-  polling_interval: 0.1.seconds
-  message_retention: 1.day
+  adapter: async
