--- a/.env.dist
+++ b/.env.dist
@@ -20,6 +20,7 @@ CLOUD_RUN_ENDPOINT=""
 CLOUD_RUN_ENDPOINT_DEV="https://.....run.app"
 CLOUD_RUN_ENDPOINT_PROD="..."
 
+COMMA_SEPARATED_ALLOWED_ORIGINS="1.2.3.4,5.6.7.8"
 
 
 # Automated JOBS - password
