adding AppConfig to Tools

--- a/rubyllm_chat_app/justfile
+++ b/rubyllm_chat_app/justfile
@@ -93,3 +93,6 @@ docker-run:
 # MCP
 mcp-test:
     curl http://localhost:8080/mcp/sse
+# MCP procy on port 6277, 6274, ..
+mcp-proxy:
+    npx @modelcontextprotocol/inspector
