--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -121,6 +121,7 @@ steps:
   - 'GCLOUD_REGION=$_GCLOUD_REGION'
   # dev only for now
   - 'CLOUD_RUN_ENDPOINT=$_CLOUD_RUN_ENDPOINT'
+  - 'OCCASIONAL_MESSAGE="Ciao DEV from Cloud Build"'
   # got from derek ifconfig!
   #- 'ALLOWED_ORIGINS=2a00:79e0:2846:6:8068:8006:f319:4a7,2a00:79e0:2846:6:7dec:ea52:c63a:50f9,2a00:79e0:2846:6:f6b4:dcc:ead9:441f'
 
@@ -146,5 +147,6 @@ steps:
   - 'GEMINI_API_KEY=$_GEMINI_API_KEY'
   # dev only for now TODO add prod too.
   - 'CLOUD_RUN_ENDPOINT=$_CLOUD_RUN_ENDPOINT'
-  # todo refactor in common place. EMPTY for prod - more secure.
+  - 'OCCASIONAL_MESSAGE="We are in PROD. Ciao from Cloud Build"'
+    # todo refactor in common place. EMPTY for prod - more secure.
   #- 'ALLOWED_ORIGINS='
