feat: Add tool to list chats with ugly titles
- Added a new tool  to get a list of chats with default titles.
- Added  method to the  model.
- Added  alias to .

--- a/rubyllm_chat_app/justfile
+++ b/rubyllm_chat_app/justfile
@@ -98,8 +98,11 @@ docker-run:
 # MCP
 mcp-test:
     curl http://localhost:8080/mcp/sse
-# MCP procy on port 6277, 6274, ..
+# MCP inspector on port 6277, 6274, ..
 mcp-proxy:
+    npx @modelcontextprotocol/inspector
+# MCP inspector usually on port 6274
+mcp-inspector:
     npx @modelcontextprotocol/inspector
 
 
