feat: Add chat image generation
- Add Active Storage to the project with a migration to create the necessary tables.
- Add `has_one_attached :generated_image` to the `Chat` model.
- Add a "Generate Image" button to the chat view, which is only visible when a chat does not have an associated image.
- Add a `generate_image` action to the `ChatsController` to enqueue a `GenerateChatImageJob`.
- Add a `GenerateChatImageJob` to generate and attach an image to a chat.
- Add a `just` command to populate a sample image for a chat.
- Refactor the `just` command to use a `Chat` model method.

--- a/rubyllm_chat_app/justfile
+++ b/rubyllm_chat_app/justfile
@@ -112,3 +112,7 @@ mcp-inspector:
 diagrams:
     DATABASE_URL=$DATABASE_URL_DEV bundle exec erd
     mv erd.pdf ../docs/erd.pdf
+
+populate-sample-image CHAT_ID='25':
+    @echo "Populating sample image for chat {{CHAT_ID}}..."
+    @DATABASE_URL=$DATABASE_URL_DEV rails runner "Chat.find({{CHAT_ID}}).attach_image('app/assets/images/sample-image.png')"
