RICC: updating prompt for Playwroght to play right with auth

--- a/.env.dist
+++ b/.env.dist
@@ -27,6 +27,9 @@ COMMA_SEPARATED_ALLOWED_ORIGINS="1.2.3.4,5.6.7.8"
 CLOUD_SCHEDULER_SECRET='your-123-secret'
 
 
+## Playwright user/pass - create it if you need it to connect with authentication.
+PLAYWRIGHT_USERNAME="your-playwright-email@example.com"
+PLAYWRIGHT_PASSWORD="y0ur-pl4ywright-P455w0rd"
 
 
 # PLEONASMS
