--- a/rubyllm_chat_app/justfile
+++ b/rubyllm_chat_app/justfile
@@ -116,3 +116,8 @@ diagrams:
 populate-sample-image CHAT_ID='25':
     @echo "Populating sample image for chat {{CHAT_ID}}..."
     @DATABASE_URL=$DATABASE_URL_DEV rails runner "Chat.find({{CHAT_ID}}).attach_image('app/assets/images/sample-image.png')"
+
+generate-chat-image CHAT_ID:
+    @echo "Enqueuing image generation for chat {{CHAT_ID}}..."
+    @DATABASE_URL=$DATABASE_URL_DEV rails runner "GenerateChatImageJob.perform_later(Chat.find({{CHAT_ID}}))"
+
