feat: Configure Active Storage to use Google Cloud Storage
This commit configures the application to use Google Cloud Storage for storing generated images, both in development and production.

Key changes include:

- Added the `google-cloud-storage` gem to the `Gemfile`.
- Configured `config/storage.yml` to use a GCS bucket, with credentials
  provided by the `GCS_CREDENTIALS_JSON` environment variable.
- Set both the development and production environments to use the `:google`
  Active Storage service.
- Created a `iac/gcs_setup.sh` script to create and configure the GCS
  bucket, including a service account with the necessary permissions.
- Added a `just` command to `generate-image` for a chat, and a
  `delete-image` command to remove an image.
- Created helper scripts in `rubyllm_chat_app/script/` to handle the
  image generation and deletion logic.
- Fixed a YAML parsing issue in `config/storage.yml` by using
  `JSON.parse` to handle the multi-line `GCS_CREDENTIALS_JSON` variable.
- Updated the `GenerateChatImageJob` to be more robust and to save
  images in environment-specific folders within the GCS bucket.

--- a/.env.dist
+++ b/.env.dist
@@ -7,6 +7,9 @@ REGION='europe-west1'
 RAILS_MASTER_KEY=''
 GEMINI_API_KEY=''
 OCCASIONAL_MESSAGE='Add your custom message'
+GCS_BUCKET="your-gcs-bucket-name"
+GCS_CREDENTIALS_JSON=""
+
 
 CB_SUBSTITUTIONS=_RAILS_MASTER_KEY="$RAILS_MASTER_KEY",_GEMINI_API_KEY="$GEMINI_API_KEY",_DATABASE_URL_PROD="$DATABASE_URL_PROD"
 
