fix(gcs): Conditionally load GCS credentials
This commit fixes an issue where the application would fail to start in a Cloud Run environment because it was trying to load GCS credentials from an environment variable that was not present. The `config/storage.yml` has been updated to only load the credentials if the `GCS_CREDENTIALS_JSON` environment variable is present.

Fixes #15

--- a/rubyllm_chat_app/config/storage.yml
+++ b/rubyllm_chat_app/config/storage.yml
@@ -18,8 +18,9 @@ local:
 google:
   service: GCS
   project: <%= ENV["GCS_PROJECT"] %>
-  # Credentials which work in localhost but FAIL in Cloud Run
-  credentials: <%= ENV["GCS_CREDENTIALS_JSON", '' ] %>
+  <% if ENV["GCS_CREDENTIALS_JSON"].present? %>
+  credentials: <%= ENV["GCS_CREDENTIALS_JSON"] %>
+  <% end %>
   bucket: <%= ENV["GCS_BUCKET"] %>
   public: true
   #folder: <%= Rails.env %> # not needed, happens in code.
