--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -38,6 +38,7 @@ substitutions:
   _GCLOUD_REGION: europe-west10 # for Cloud Run. Cambiato da eu-west1
   _PROJECT_ID: palladius-genai
   _APP_NAME: rails8-turbo-chat
+  _GCS_BUCKET: ''
   #_DATABASE_URL_DEV: 'sqlite3:storage/development.sqlite3'
   #_DATABASE_URL_PROD: 'sqlite3:storage/production.sqlite3'
   _SKAFFOLD_DEFAULT_REPO: 'europe-west10-docker.pkg.dev/palladius-genai/berliner-docker-repo'
@@ -118,6 +119,7 @@ steps:
   - 'DATABASE_URL=$_DATABASE_URL_DEV'
   - 'APP_NAME=$_APP_NAME'
   - 'GCLOUD_REGION=$_GCLOUD_REGION'
+  - 'GCS_BUCKET=$_GCS_BUCKET'
   # dev only for now
   - 'CLOUD_RUN_ENDPOINT=$_CLOUD_RUN_ENDPOINT'
   - 'OCCASIONAL_MESSAGE="Ciao DEV from Cloud Build"'
@@ -143,6 +145,7 @@ steps:
   - 'GEMINI_REPLY_JOB_VERBOSE=true'
   - 'APP_NAME=$_APP_NAME'
   - 'GCLOUD_REGION=$_GCLOUD_REGION'
+  - 'GCS_BUCKET=$_GCS_BUCKET'
   - 'GEMINI_API_KEY=$_GEMINI_API_KEY'
   # dev only for now TODO add prod too.
   - 'CLOUD_RUN_ENDPOINT=$_CLOUD_RUN_ENDPOINT'
