--- a/rubyllm_chat_app/config/storage.yml
+++ b/rubyllm_chat_app/config/storage.yml
@@ -17,7 +17,7 @@ local:
 # Remember not to checkin your GCS keyfile to a repository
 google:
   service: GCS
-  project: <%= ENV["GCS_PROJECT"] %>
+  project: <%= ENV["PROJECT_ID"] %>
   <% if ENV["GCS_CREDENTIALS_JSON"].present? %>
   credentials: <%= ENV["GCS_CREDENTIALS_JSON"] %>
   <% end %>
