fix(cloudbuild): Pass GCS_CREDENTIALS_JSON to Cloud Run

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -120,6 +120,7 @@ steps:
   - 'APP_NAME=$_APP_NAME'
   - 'GCLOUD_REGION=$_GCLOUD_REGION'
   - 'GCS_BUCKET=$_GCS_BUCKET'
+  - 'GCS_CREDENTIALS_JSON=$_GCS_CREDENTIALS_JSON'
   # dev only for now
   - 'CLOUD_RUN_ENDPOINT=$_CLOUD_RUN_ENDPOINT'
   - 'OCCASIONAL_MESSAGE="Ciao DEV from Cloud Build"'
