--- a/.env.dist
+++ b/.env.dist
@@ -11,11 +11,12 @@ GCS_BUCKET="your-gcs-bucket-name"
 GCS_CREDENTIALS_JSON=""
 
 
-CB_SUBSTITUTIONS=_RAILS_MASTER_KEY="$RAILS_MASTER_KEY",_GEMINI_API_KEY="$GEMINI_API_KEY",_DATABASE_URL_PROD="$DATABASE_URL_PROD"
-
 # DAtabase in dev and prod. NEEDS TO BE PostgreS, sorry.
 DATABASE_URL_DEV='postgresql://...'
 DATABASE_URL_PROD='postgresql://..'
+
+# This needs to be AFTER these..
+CB_SUBSTITUTIONS=_RAILS_MASTER_KEY="$RAILS_MASTER_KEY",_GEMINI_API_KEY="$GEMINI_API_KEY",_DATABASE_URL_PROD="$DATABASE_URL_PROD"
 
 # USED
 CLOUD_RUN_ENDPOINT=""
