--- a/app/Gemfile
+++ b/app/Gemfile
@@ -8,8 +8,6 @@ source "https://rubygems.org"
 gem "rails", "~> 8.0"
 # The modern asset pipeline for Rails [https://github.com/rails/propshaft]
 gem "propshaft"
-# Use postgresql as the database for Active Record
-gem "pg", "~> 1.1"
 # Use the Puma web server [https://github.com/puma/puma]
 gem "puma", ">= 5.0"
 # Use JavaScript with ESM import maps [https://github.com/rails/importmap-rails]
@@ -64,6 +62,8 @@ group :development, :test do
 end
 
 group :development do
+  # Use sqlite as the database for Active Record
+  gem "sqlite3"
   # Use console on exceptions pages [https://github.com/rails/web-console]
   gem "web-console"
   # RICCARDO - suiggested by gemini to fix foreman issue on derek.
@@ -82,6 +82,11 @@ group :test do
   # Use system testing [https://guides.rubyonrails.org/testing.html#system-testing]
   gem "capybara"
   gem "selenium-webdriver"
+end
+
+group :production do
+  # Use postgresql as the database for Active Record
+  gem "pg", "~> 1.1"
 end
 
 
