--- a/rubyllm_chat_app/.env.example
+++ b/rubyllm_chat_app/.env.example
@@ -2,6 +2,10 @@ APP_NAME=mimmo
 PORT=3000
 PROJECT_ID=rails8-turbo-chat
 
+# ENABLE FOR DEBUGGING
+# 0 = disabled, 1 = enabled
+WEB_CONSOLE=0
+
 # TODO: hardcode this or provide instructions
 GCLOUD_REGION=europe-west1
 GCS_BUCKET=fill-me
