--- a/.env.dist
+++ b/.env.dist
@@ -39,3 +39,5 @@ PLAYWRIGHT_PASSWORD="y0ur-pl4ywright-P455w0rd"
 # Copy the above, used by some things.
 GCLOUD_REGION='europe-west10'
 PORT='8080'
+
+WORKSHOP_ENVIRONMENT='dot_env'
