--- a/.env.dist
+++ b/.env.dist
@@ -1,43 +1,55 @@
 
-
-
-PROJECT_ID="your-project-id"
-#PROJECT_NUMBER='272932496670'
-REGION='europe-west1'
-RAILS_MASTER_KEY=''
 GEMINI_API_KEY=''
-OCCASIONAL_MESSAGE='Add your custom message'
-GCS_BUCKET="your-gcs-bucket-name"
-GCS_CREDENTIALS_JSON=""
-
-
-# DAtabase in dev and prod. NEEDS TO BE PostgreS, sorry.
-DATABASE_URL_PROD='postgresql://..'
-
-# This needs to be AFTER these..
-CB_SUBSTITUTIONS=_RAILS_MASTER_KEY="$RAILS_MASTER_KEY",_GEMINI_API_KEY="$GEMINI_API_KEY",_DATABASE_URL_PROD="$DATABASE_URL_PROD"
-
-# USED
-CLOUD_RUN_ENDPOINT=""
-# NON USED YET
-CLOUD_RUN_ENDPOINT_DEV="https://.....run.app"
-CLOUD_RUN_ENDPOINT_PROD="..."
-
-COMMA_SEPARATED_ALLOWED_ORIGINS="1.2.3.4,5.6.7.8"
-
-
-# Automated JOBS - password
-CLOUD_SCHEDULER_SECRET='your-123-secret'
-
-
-## Playwright user/pass - create it if you need it to connect with authentication.
-PLAYWRIGHT_USERNAME="your-playwright-email@example.com"
-PLAYWRIGHT_PASSWORD="y0ur-pl4ywright-P455w0rd"
-
-
-# PLEONASMS
-# Copy the above, used by some things.
-GCLOUD_REGION='europe-west10'
+DATABASE_URL="sqlite3://db/development.sqlite3"
+REGION='europe-west1'
 PORT='8080'
 
+
 WORKSHOP_ENVIRONMENT='dot_env'
+
+
+
+
+
+
+
+
+
+
+
+
+# PROJECT_ID="your-project-id"
+# #PROJECT_NUMBER='272932496670'
+# RAILS_MASTER_KEY=''
+# OCCASIONAL_MESSAGE='Add your custom message'
+# GCS_BUCKET="your-gcs-bucket-name"
+# GCS_CREDENTIALS_JSON=""
+
+
+# # DAtabase in dev and prod. NEEDS TO BE PostgreS, sorry.
+# #DATABASE_URL_PROD='postgresql://..'
+
+# # This needs to be AFTER these..
+# CB_SUBSTITUTIONS=_RAILS_MASTER_KEY="$RAILS_MASTER_KEY",_GEMINI_API_KEY="$GEMINI_API_KEY",_DATABASE_URL_PROD="$DATABASE_URL_PROD"
+
+# # USED
+# CLOUD_RUN_ENDPOINT=""
+# # NON USED YET
+# CLOUD_RUN_ENDPOINT_DEV="https://.....run.app"
+# CLOUD_RUN_ENDPOINT_PROD="..."
+
+# COMMA_SEPARATED_ALLOWED_ORIGINS="1.2.3.4,5.6.7.8"
+
+
+# # Automated JOBS - password
+# CLOUD_SCHEDULER_SECRET='your-123-secret'
+
+
+# ## Playwright user/pass - create it if you need it to connect with authentication.
+# PLAYWRIGHT_USERNAME="your-playwright-email@example.com"
+# PLAYWRIGHT_PASSWORD="y0ur-pl4ywright-P455w0rd"
+
+
+# # PLEONASMS
+# # Copy the above, used by some things.
+# GCLOUD_REGION='europe-west10'
